2004-08-17  Geoffrey Hutchison  <ghutchis@wso.williams.edu>

	* configure.in: Make the check for doxygen to be a typical
	AC_PATH_PROG -- it's not a critical dependency.
	
	* configure, aclocal.m4, config.guess, config.sub, ltmain.sh,
	 */Makefile.in: Update with latest automake/libtool/autoconf
	versions (automake-1.9.1, libtool-1.5.8 autoconf 2.59).

	* src/isotope-small.txt, src/isotope.txt: Update with latest data
	from 2003 canonical data. 

2004-07-20  Geoffrey Hutchison  <ghutchis@wso.williams.edu>

	* src/ghemical.cpp: Ignore multiple coordinate sets -- only read
	the first one currently, but don't bail if more than one exists.

	* src/cssr.cpp: Update with unit cell information and fixing bugs
	reported by Mathias Weigt when dealing with SOMFA package.

2004-07-02  Michael Banck  <mbanck@gmx.net>

	* src/obutil.cpp (InternalToCartesian): avec, bvec, cvec, dst, ang,
	tor: New short circuit variables. Start index at zero again. Fix
	torsion angle of the fourth atom. Thanks to Gerd Menche.

2004-03-13  Michael Banck  <mbanck@gmx.net>

	* test/unitcell.cpp (TestUnitCell): Use %lf instead of %f to read
	in the values from unitcell.txt.

2004-03-07  Geoffrey Hutchison  <ghutchis@wso.williams.edu>

	* src/chdrw.cpp (ReadChemDraw): Add support for reading ChemDraw
	CT files.

	* src/data.h, src/data.cpp: Change GAUSSIANZMAT to GAUSSIANOUT to
	allow support for reading G98 and G03 output.

	* src/extable.txt: Add ChemDraw reading and Gaussian 98/03 output
	to list.

	* src/fileformat.h, src/fileformat.cpp: Ditto.

	* src/extable.h: Regenerate.

	* src/gaussian.cpp: Add support for reading G98/G03 output and
	writing isotopes where applicable.

	* src/hin.cpp: Fix bug with more recent HIN formats with basis set
	information.

	* configure, Makefile.in, */Makefile.in: Update with latest
	autotools.

	* src/mol.cpp, src/mol.h: Backpedal slightly with Fabien's
	2003-12-17 changes. Use OB_TSPIN_MOL as used by 1.100.2 and